zebra-state/src/service/finalized_state/disk_format/tests/snapshots/utxo_by_transparent_addr_loc_raw_data@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "0000010000000001",
    v: "0000010000000001",
  ),
]
